Fix sidebar icons and alignment

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -15,3 +15,7 @@ mat-sidenav-container {
 mat-sidenav {
   width: 20vh;
 }
+
+.mat-icon-margin {
+  margin-right: 8px !important;
+}
